--- a/app/index.html
+++ b/app/index.html
@@ -4,11 +4,75 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Proj5</title>
+    <title>Moderno</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/libs.min.css" />
     <link rel="stylesheet" href="css/main.min.css" />
   </head>
   <body>
+    <header class="header" id="header">
+      <div class="header__top">
+        <div class="container">
+          <div class="header__top-inner">
+            <div class="header__logo">
+              <a href="#"><img src="images/logo.png" alt="logo" /></a>
+            </div>
+            <div class="header__text">
+              <a href="#"><span> Need help?</span></a
+              >Talk to an expert:
+              <a href="tel:61383766284">+61 3 8376 6284</a>
+            </div>
+            <div class="header__btns">
+              <a href="#" class="basket"></a>
+              <a href="#" class="header__btn header__btn--login">Login</a>
+              <a href="#" class="header__btn header__btn--register">Register</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <nav class="header__menu">
+        <div class="container">
+          <ul class="header__menu-list">
+            <li class="header__menu-item">
+              <a href="" class="header__menu-link"> Home </a>
+            </li>
+            <li class="header__menu-item">
+              <a href="" class="header__menu-link"> About </a>
+            </li>
+            <li class="header__menu-item">
+              <a href="" class="header__menu-link"> WordPress </a>
+            </li>
+            <li class="header__menu-item">
+              <a href="" class="header__menu-link"> Joomla </a>
+            </li>
+            <li class="header__menu-item">
+              <a href="" class="header__menu-link"> PSD </a>
+            </li>
+            <li class="header__menu-item">
+              <a href="" class="header__menu-link"> Plugins </a>
+            </li>
+            <li class="header__menu-item">
+              <a href="" class="header__menu-link"> Components </a>
+            </li>
+            <li class="header__menu-item">
+              <a href="" class="header__menu-link"> Pages </a>
+            </li>
+            <li class="header__menu-item">
+              <a href="" class="header__menu-link"> Contact </a>
+            </li>
+            <li class="header__menu-item">
+              <a href="" class="header__menu-link"> Help </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
     <script src="js/main.min.js/"></script>
