added search section

--- a/app/index.html
+++ b/app/index.html
@@ -72,7 +72,27 @@
         </div>
       </nav>
     </header>
-
+    <section class="first" style="background-image: url(images/bg.jpg)">
+      <div class="container">
+        <div class="search__inner">
+          <h1 class="search__inner-title">Welcome To Foxtar Market Place!</h1>
+          <div class="search__inner-intro">
+            Premium WordPress Themes, Web Templates and Many More ...
+          </div>
+          <form class="search__inner-form" action="#">
+            <input
+              class="search__inner-input"
+              type="text"
+              placeholder="Search Your Keywords . . ."
+              required
+            />
+            <button class="search__inner-btn" type="submit">
+              <img src="images/search.png" alt="search icon" />
+            </button>
+          </form>
+        </div>
+      </div>
+    </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
     <script src="js/main.min.js/"></script>
