--- a/app/index.html
+++ b/app/index.html
@@ -1,100 +1,314 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Moderno</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/libs.min.css" />
-    <link rel="stylesheet" href="css/main.min.css" />
-  </head>
-  <body>
-    <header class="header" id="header">
-      <div class="header__top">
-        <div class="container">
-          <div class="header__top-inner">
-            <div class="header__logo">
-              <a href="#"><img src="images/logo.png" alt="logo" /></a>
-            </div>
-            <div class="header__text">
-              <a href="#"><span> Need help?</span></a
-              >Talk to an expert:
-              <a href="tel:61383766284">+61 3 8376 6284</a>
-            </div>
-            <div class="header__btns">
-              <a href="#" class="basket"></a>
-              <a href="#" class="header__btn header__btn--login">Login</a>
-              <a href="#" class="header__btn header__btn--register">Register</a>
-            </div>
-          </div>
+<head>
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Moderno</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com"/>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+  <link
+          href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+          rel="stylesheet"
+  />
+  <link rel="stylesheet" href="css/libs.min.css"/>
+  <link rel="stylesheet" href="css/main.min.css"/>
+</head>
+<body>
+<header class="header" id="header">
+  <div class="header__top">
+    <div class="container">
+      <div class="header__top-inner">
+        <div class="header__logo">
+          <a href="#"><img src="images/logo.png" alt="logo"/></a>
+        </div>
+        <div class="header__text">
+          <a href="#"><span> Need help?</span></a
+          >Talk to an expert:
+          <a href="tel:61383766284">+61 3 8376 6284</a>
+        </div>
+        <div class="header__btns">
+          <a href="#" class="basket"></a>
+          <a href="#" class="header__btn header__btn--login">Login</a>
+          <a href="#" class="header__btn header__btn--register">Register</a>
         </div>
       </div>
-      <nav class="header__menu">
-        <div class="container">
-          <ul class="header__menu-list">
-            <li class="header__menu-item">
-              <a href="" class="header__menu-link"> Home </a>
-            </li>
-            <li class="header__menu-item">
-              <a href="" class="header__menu-link"> About </a>
-            </li>
-            <li class="header__menu-item">
-              <a href="" class="header__menu-link"> WordPress </a>
-            </li>
-            <li class="header__menu-item">
-              <a href="" class="header__menu-link"> Joomla </a>
-            </li>
-            <li class="header__menu-item">
-              <a href="" class="header__menu-link"> PSD </a>
-            </li>
-            <li class="header__menu-item">
-              <a href="" class="header__menu-link"> Plugins </a>
-            </li>
-            <li class="header__menu-item">
-              <a href="" class="header__menu-link"> Components </a>
-            </li>
-            <li class="header__menu-item">
-              <a href="" class="header__menu-link"> Pages </a>
-            </li>
-            <li class="header__menu-item">
-              <a href="" class="header__menu-link"> Contact </a>
-            </li>
-            <li class="header__menu-item">
-              <a href="" class="header__menu-link"> Help </a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </header>
-    <section class="first" style="background-image: url(images/bg.jpg)">
-      <div class="container">
-        <div class="search__inner">
-          <h1 class="search__inner-title">Welcome To Foxtar Market Place!</h1>
-          <div class="search__inner-intro">
-            Premium WordPress Themes, Web Templates and Many More ...
+    </div>
+  </div>
+  <nav class="header__menu">
+    <div class="container">
+      <ul class="header__menu-list">
+        <li class="header__menu-item">
+          <a href="" class="header__menu-link"> Home </a>
+        </li>
+        <li class="header__menu-item">
+          <a href="" class="header__menu-link"> About </a>
+        </li>
+        <li class="header__menu-item">
+          <a href="" class="header__menu-link"> WordPress </a>
+        </li>
+        <li class="header__menu-item">
+          <a href="" class="header__menu-link"> Joomla </a>
+        </li>
+        <li class="header__menu-item">
+          <a href="" class="header__menu-link"> PSD </a>
+        </li>
+        <li class="header__menu-item">
+          <a href="" class="header__menu-link"> Plugins </a>
+        </li>
+        <li class="header__menu-item">
+          <a href="" class="header__menu-link"> Components </a>
+        </li>
+        <li class="header__menu-item">
+          <a href="" class="header__menu-link"> Pages </a>
+        </li>
+        <li class="header__menu-item">
+          <a href="" class="header__menu-link"> Contact </a>
+        </li>
+        <li class="header__menu-item">
+          <a href="" class="header__menu-link"> Help </a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</header>
+<section class="first" style="background-image: url(images/bg.jpg)">
+  <div class="container">
+    <div class="search__inner">
+      <h1 class="search__inner-title">Welcome To Foxtar Market Place!</h1>
+      <div class="search__inner-intro">
+        Premium WordPress Themes, Web Templates and Many More ...
+      </div>
+      <form class="search__inner-form" action="#">
+        <input
+                class="search__inner-input"
+                type="text"
+                placeholder="Search Your Keywords . . ."
+                required
+        />
+        <button class="search__inner-btn" type="submit">
+          <img src="images/search.png" alt="search icon"/>
+        </button>
+      </form>
+    </div>
+  </div>
+</section>
+
+<section class="products">
+  <div class="container-fluid">
+    <h2 class="products__title">
+      Let’s Check Out Our Newest Release Prodcuts
+    </h2>
+    <div class="products__inner-btns">
+      <button type="button" data-filter="all">All</button>
+      <button type="button" data-filter=".category-wordpress">WordPress</button>
+      <button type="button" data-filter=".category-joomla">Joomla</button>
+      <button type="button" data-filter=".category-plugins">Plugins</button>
+      <button type="button" data-filter=".category-component">Component</button>
+      <button type="button" data-filter=".category-psd">PSD</button>
+    </div>
+    <div class="products__inner-box">
+      <div class="product__item mix category-wordpress category-new" data-order="1">
+        <a class="product__img" href="#" style="background-image: url(images/products/item-1.jpg);"></a>
+        <div class="products__item-content">
+          <div class="products__item-inner">
+            <a href="#" class="products__item-title">
+              Responsive Mobile APP
+            </a>
+            <a class="products__item-category" href="#">
+              Site Template
+            </a>
           </div>
-          <form class="search__inner-form" action="#">
-            <input
-              class="search__inner-input"
-              type="text"
-              placeholder="Search Your Keywords . . ."
-              required
-            />
-            <button class="search__inner-btn" type="submit">
-              <img src="images/search.png" alt="search icon" />
-            </button>
-          </form>
+          <div class="price">
+            $19
+          </div>
+
+        </div>
+        <div class="product__item-info">
+          <div class="product__item-author">
+            <a href="#"><span style="background-image: url(images/products/user.jpg);"></span></a>
+            <a href="#">Radiustheme</a>
+          </div>
+          <div class="product__item-rate">(<span>05</span>)</div>
         </div>
       </div>
-    </section>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="js/libs.min.js"></script>
-    <script src="js/main.min.js/"></script>
-  </body>
+      <div class="product__item mix category-joomla category-old" data-order="2">
+        <a class="product__img" href="#" style="background-image: url(images/products/item-1.jpg);"></a>
+        <div class="products__item-content">
+          <div class="products__item-inner">
+            <a href="#" class="products__item-title">
+              Responsive Mobile APP
+            </a>
+            <a class="products__item-category" href="#">
+              Site Template
+            </a>
+          </div>
+          <div class="price">
+            $19
+          </div>
+
+        </div>
+        <div class="product__item-info">
+          <div class="product__item-author">
+            <a href="#"><span style="background-image: url(images/products/user.jpg);"></span></a>
+            <a href="#">Radiustheme</a>
+          </div>
+          <div class="product__item-rate">(<span>05</span>)</div>
+        </div>
+      </div>
+      <div class="product__item mix category-plugins category-new" data-order="3">
+        <a class="product__img" href="#" style="background-image: url(images/products/item-1.jpg);"></a>
+        <div class="products__item-content">
+          <div class="products__item-inner">
+            <a href="#" class="products__item-title">
+              Responsive Mobile APP
+            </a>
+            <a class="products__item-category" href="#">
+              Site Template
+            </a>
+          </div>
+          <div class="price">
+            $19
+          </div>
+
+        </div>
+        <div class="product__item-info">
+          <div class="product__item-author">
+            <a href="#"><span style="background-image: url(images/products/user.jpg);"></span></a>
+            <a href="#">Radiustheme</a>
+          </div>
+          <div class="product__item-rate">(<span>05</span>)</div>
+        </div>
+      </div>
+      <div class="product__item mix category-psd category-new" data-order="4">
+        <a class="product__img" href="#" style="background-image: url(images/products/item-1.jpg);"></a>
+        <div class="products__item-content">
+          <div class="products__item-inner">
+            <a href="#" class="products__item-title">
+              Responsive Mobile APP
+            </a>
+            <a class="products__item-category" href="#">
+              Site Template
+            </a>
+          </div>
+          <div class="price">
+            $19
+          </div>
+
+        </div>
+        <div class="product__item-info">
+          <div class="product__item-author">
+            <a href="#"><span style="background-image: url(images/products/user.jpg);"></span></a>
+            <a href="#">Radiustheme</a>
+          </div>
+          <div class="product__item-rate">(<span>05</span>)</div>
+        </div>
+      </div>
+      <div class="product__item mix category-wordpress category-old" data-order="5">
+        <a class="product__img" href="#" style="background-image: url(images/products/item-1.jpg);"></a>
+        <div class="products__item-content">
+          <div class="products__item-inner">
+            <a href="#" class="products__item-title">
+              Responsive Mobile APP
+            </a>
+            <a class="products__item-category" href="#">
+              Site Template
+            </a>
+          </div>
+          <div class="price">
+            $19
+          </div>
+
+        </div>
+        <div class="product__item-info">
+          <div class="product__item-author">
+            <a href="#"><span style="background-image: url(images/products/user.jpg);"></span></a>
+            <a href="#">Radiustheme</a>
+          </div>
+          <div class="product__item-rate">(<span>05</span>)</div>
+        </div>
+      </div>
+      <div class="product__item mix category-joomla category-old" data-order="6">
+        <a class="product__img" href="#" style="background-image: url(images/products/item-1.jpg);"></a>
+        <div class="products__item-content">
+          <div class="products__item-inner">
+            <a href="#" class="products__item-title">
+              Responsive Mobile APP
+            </a>
+            <a class="products__item-category" href="#">
+              Site Template
+            </a>
+          </div>
+          <div class="price">
+            $19
+          </div>
+
+        </div>
+        <div class="product__item-info">
+          <div class="product__item-author">
+            <a href="#"><span style="background-image: url(images/products/user.jpg);"></span></a>
+            <a href="#">Radiustheme</a>
+          </div>
+          <div class="product__item-rate">(<span>05</span>)</div>
+        </div>
+      </div>
+      <div class="product__item mix category-component category-new" data-order="7">
+        <a class="product__img" href="#" style="background-image: url(images/products/item-1.jpg);"></a>
+        <div class="products__item-content">
+          <div class="products__item-inner">
+            <a href="#" class="products__item-title">
+              Responsive Mobile APP
+            </a>
+            <a class="products__item-category" href="#">
+              Site Template
+            </a>
+          </div>
+          <div class="price">
+            $19
+          </div>
+
+        </div>
+        <div class="product__item-info">
+          <div class="product__item-author">
+            <a href="#"><span style="background-image: url(images/products/user.jpg);"></span></a>
+            <a href="#">Radiustheme</a>
+          </div>
+          <div class="product__item-rate">(<span>05</span>)</div>
+        </div>
+      </div>
+      <div class="product__item mix category-psd category-old" data-order="8">
+        <a class="product__img" href="#" style="background-image: url(images/products/item-1.jpg);"></a>
+        <div class="products__item-content">
+          <div class="products__item-inner">
+            <a href="#" class="products__item-title">
+              Responsive Mobile APP
+            </a>
+            <a class="products__item-category" href="#">
+              Site Template
+            </a>
+          </div>
+          <div class="price">
+            $19
+          </div>
+
+        </div>
+        <div class="product__item-info">
+          <div class="product__item-author">
+            <a href="#"><span style="background-image: url(images/products/user.jpg);"></span></a>
+            <a href="#">Radiustheme</a>
+          </div>
+          <div class="product__item-rate">(<span>05</span>)</div>
+        </div>
+      </div>
+    </div>
+    <div class="product__bottom-btns">
+      <button type="button" data-filter=".category-new">All New Items</button>
+      <button type="button" data-filter=".category-old">Popular Items</button>
+    </div>
+  </div>
+</section>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="js/libs.min.js"></script>
+<script src="js/main.js"></script>
+</body>
 </html>
