added 404, about, contact

--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
   <title>Moderno</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet" />
@@ -236,28 +236,28 @@
             <a href="" class="header__menu-link"> About </a>
           </li>
           <li class="header__menu-item">
-            <a href="" class="header__menu-link"> WordPress </a>
+            <a href="#" class="header__menu-link"> WordPress </a>
           </li>
           <li class="header__menu-item">
-            <a href="" class="header__menu-link"> Joomla </a>
+            <a href="#" class="header__menu-link"> Joomla </a>
           </li>
           <li class="header__menu-item">
-            <a href="" class="header__menu-link"> PSD </a>
+            <a href="#" class="header__menu-link"> PSD </a>
           </li>
           <li class="header__menu-item">
-            <a href="" class="header__menu-link"> Plugins </a>
+            <a href="#" class="header__menu-link"> Plugins </a>
           </li>
           <li class="header__menu-item">
-            <a href="" class="header__menu-link"> Components </a>
+            <a href="#" class="header__menu-link"> Components </a>
           </li>
           <li class="header__menu-item">
-            <a href="" class="header__menu-link"> Pages </a>
+            <a href="#" class="header__menu-link"> Pages </a>
           </li>
           <li class="header__menu-item">
-            <a href="" class="header__menu-link"> Contact </a>
+            <a href="#" class="header__menu-link"> Contact </a>
           </li>
           <li class="header__menu-item">
-            <a href="" class="header__menu-link"> Help </a>
+            <a href="#" class="header__menu-link"> Help </a>
           </li>
         </ul>
         <div class="header__menu-btn">
